# fastrace

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml  task-01-async-root.md  task-01-automatic-async-parent.md  typos.toml
.github/workflows/: ci.yml
examples/: Cargo.toml  asynchronous.rs  synchronous.rs
fastrace/: Cargo.toml
fastrace-datadog/: README.md
fastrace-futures/: Cargo.toml
fastrace-jaeger/: README.md
fastrace-macro/: Cargo.toml
fastrace-macro/src/: args.rs  impls.rs  lib.rs
fastrace-opentelemetry/: CHANGELOG.md  Cargo.toml  README.md
fastrace-opentelemetry/src/: lib.rs
fastrace/src/: event.rs  lib.rs  macros.rs  span.rs
fastrace/src/collector/: command.rs  global_collector.rs  id.rs  mod.rs
fastrace/src/local/: local_collector.rs  local_span.rs  local_span_line.rs  local_span_stack.rs  raw_span.rs  span_queue.rs
fastrace/src/util/: mod.rs  tree.rs
fastrace/tests/: lib.rs
tests/macros/tests/ui/err/: has-async-root-and-enter-on-poll.rs  has-async-root-and-enter-on-poll.stderr  has-async-root-and-sync.rs  has-async-root-and-sync.stderr  has-async-root-assignment.rs  has-async-root-assignment.stderr  has-duplicated-properties.rs  has-duplicated-properties.stderr  has-unknown-argument.rs  has-unknown-argument.stderr  name-is-not-string.rs  name-is-not-string.stderr  properties-missing-braces.rs  properties-missing-braces.stderr  properties-value-non-string.rs  properties-value-non-string.stderr  short-name-is-not-bool.rs  short-name-is-not-bool.stderr
tests/macros/tests/ui/ok/: has-async-root.rs  has-generic-signatures.rs  has-methods.rs  has-sync-properties.rs  has-unsafe-extern.rs
tests/statically-disable/src/: main.rs
