[workspace]
members = [
  "fastrace",
  "fastrace-macro",
  "fastrace-jaeger",
  "fastrace-datadog",
  "fastrace-opentelemetry",
  "fastrace-futures",

  # non-publish crates
  "examples",
  "tests/macros",
  "tests/statically-disable",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/fast/fastrace"
rust-version = "1.91.0"

[workspace.dependencies]
# Workspace dependencies
fastrace = { version = "0.7.17", path = "fastrace" }
fastrace-macro = { version = "0.7.17", path = "fastrace-macro" }

# Workspace leaves
fastrace-datadog = { path = "fastrace-datadog" }
fastrace-futures = { path = "fastrace-futures" }
fastrace-jaeger = { path = "fastrace-jaeger" }
fastrace-opentelemetry = { path = "fastrace-opentelemetry" }

# crates.io dependencies
log = { version = "0.4.27" }
opentelemetry = { version = "0.32.0", default-features = false, features = [
  "trace",
] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = [
  "trace",
  "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.32.0", default-features = false, features = [
  "trace",
] }
serde = { version = "1.0", features = ["derive"] }

# test dependencies
tokio = { version = "1.45.0", features = ["full"] }

[profile.bench]
lto = true
opt-level = 3

[patch.crates-io]
# Patch fastrace in crates.io because we import logforth in the examples, which
# itself depends on fastrace from crates.io. If we don't do this, example break
# because logforth brings in a different version of fastrace and the appender
# stops working.
fastrace = { path = "fastrace" }
fastrace-macro = { path = "fastrace-macro" }
