[package]
name = "fastrace-futures"
version = "0.7.18"

categories = ["development-tools::debugging"]
description = "Utilities for tracing `futures` with fastrace"
documentation = "https://docs.rs/fastrace-futures"
keywords = ["tracing", "span", "futures", "opentelemetry"]
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fastrace = { workspace = true }
futures-core = { version = "0.3.31" }
futures-sink = { version = "0.3.31" }
pin-project = { version = "1.1.8" }

[dev-dependencies]
fastrace = { workspace = true, features = ["enable"] }
async-stream = { version = "0.3" }
futures = { version = "0.3" }
tokio = { workspace = true }
